# CLEARLab

./: CMakeLists.txt  README.MD  main.cpp  package.xml
Common/include/: CLEAR_Datetype.h  RobotController.h  RobotRunner.h
Common/include/Controllers/: LegController.h
Common/include/Dynamics/: Quadruped.h
Common/src/: RobotRunner.cpp
Common/src/Controllers/: LegController.cpp
Common/src/Dynamics/: Quadruped.cpp
RobotControl/: CMakeLists.txt
RobotControl/convexMPC/: LocomotionControl.cpp  LocomotionControl.h
RobotControl/include/: ControlData.h  RobotControl.hpp
RobotControl/src/: RobotControl.cpp
RobotModel/: CMakeLists.txt
RobotModel/include/: RobotModel.h  RobotModel.hpp
RobotModel/src/: RobotModel.cpp
StateEstimation/: CMakeLists.txt
StateEstimation/include/: stateEstimation.h
StateEstimation/src/: stateEstimation.cpp
